force-app/main/default/objects/BGBK__Item__c/BGBK__Item__c.object-meta.xml
<CustomObject>
    <label>Item</label>
    <nameField>
        <displayFormat>IT-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>