force-app/main/default/objects/BGBK__Item__c/fields/BGBK__Description__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>