force-app/main/default/objects/BGBK__Item__c/fields/BGBK__Payment__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated payment record.</description>
    <label>Payment</label>
    <referenceTo>BGBK__Payment__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>