force-app/main/default/objects/BGBK__Item__c/fields/BGBK__Quantity__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Quantity__c</fullName>
    <description>Deprecated - the value is always 1.</description>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>