force-app/main/default/objects/BGBK__Item__c/fields/BGBK__Receipt__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated receipt record.</description>
    <label>Receipt</label>
    <referenceTo>MUSW__Receipt__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>