force-app/main/default/objects/BGBK__Item__c/fields/BGBK__Revenue_Source__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Revenue_Source__c</fullName>
    <label>Revenue Source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>