force-app/main/default/objects/BGBK__Item__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <formula>IF( NOT(ISBLANK(BGBK__Receipt__c) ), text(BGBK__Receipt__r.MUSW__Card_Type__c ) , IF(NOT(ISBLANK(Fee_Payment__c) ), text(Fee_Payment__r.BGBK__Payment__r.BGBK__Receipt__r.MUSW__Card_Type__c ) , &quot;&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Type</label>
    <type>Text</type>
</CustomField>