force-app/main/default/objects/BGBK__Item__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deposit</label>
    <referenceTo>MUSW__Deposit__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>