force-app/main/default/objects/BGBK__Item__c/fields/Fee_Payment__c.field-meta.xml
<CustomField>
    <fullName>Fee_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Payment</label>
    <referenceTo>MUSW__Fee_Payment__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>