force-app/main/default/objects/BGBK__Item__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(IF( NOT(ISBLANK(BGBK__Receipt__c) ), text(BGBK__Receipt__r.MUSW__Payment_Method__c) , IF(NOT(ISBLANK(Fee_Payment__c) ), text(Fee_Payment__r.BGBK__Payment__r.BGBK__Receipt__r.MUSW__Payment_Method__c) , &quot;Deposit (Cash)&quot; )), &quot;Internal Transfer&quot;, &quot;Internal Transfer (Cash)&quot;), &quot;_&quot;, &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>