force-app/main/default/objects/BGBK__Item__c/recordTypes/BGBK__AdminOnly.recordType-meta.xml
<RecordType>
    <fullName>BGBK__AdminOnly</fullName>
    <active>true</active>
    <label>AdminOnly</label>
</RecordType>