force-app/main/default/objects/BGBK__Item__c/validationRules/BGBK__Item_Trans_change_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBK__Item_Trans_change_not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( BGBK__Transaction__c )</errorConditionFormula>
    <errorMessage>Transaction is not editable</errorMessage>
</ValidationRule>